# urlshortener

./: .example.env  Dockerfile  README.md  manage.py  nginx.conf  pyproject.toml  supervisord.conf
shortener/: serializers.py  tests.py  urls.py  views.py
urlshortener/: .example.env  settings.py  urls.py
urlshortener/shortener/: models.py  serializers.py  tests.py  urls.py  views.py
urlshortener/shortener/migrations/: 0001_initial.py
urlshortener/urlshortener/: settings.py  urls.py
